<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app2"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/p6_preguntas"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_preguntas"
            android:src="@drawable/button_preguntas"
            android:text="@string/Imageview_preguntas" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/p6_contador" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"

        >

        <Button
            android:layout_width="359dp"
            android:layout_height="72dp"
            android:background="@drawable/button_fondo"
            android:layout_marginTop="1dp"
            android:text="@string/resp1">

        </Button>

        <Button
            android:layout_width="359dp"
            android:layout_height="72dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/button_fondo"
            android:text="@string/resp2">

        </Button>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="359dp"
            android:layout_height="72dp"
            android:background="@drawable/button_fondo"
            android:layout_marginTop="1dp"
            android:text="@string/resp3">

        </Button>

        <Button
            android:layout_width="359dp"
            android:layout_height="72dp"
            android:background="@drawable/button_fondo"
            android:layout_marginTop="1dp"
            android:text="@string/resp4">

        </Button>

        <Button>

        </Button>


    </LinearLayout>






</LinearLayout>